@startuml FeatG16_AuthGoogleMobileLogin_ClassDiagram
!define RECTANGLE class

skinparam backgroundColor #FEFEFE
skinparam classBackgroundColor #FFFFFF
skinparam classBorderColor #000000
skinparam packageBackgroundColor #E8E8E8
skinparam packageBorderColor #666666
skinparam stereotypeCBackgroundColor #ADD1B2
skinparam arrowColor #333333

title FeatG16_AuthGoogleMobileLogin - Class Diagram\n(Domain-Centric Architecture + CQRS Pattern)

' ============================================
' PRESENTATION LAYER
' ============================================
package "PRESENTATION LAYER" #E1D5E7 {
  class GoogleMobileLoginEndpoint <<Endpoint>> {
    - _mediator: IMediator
    --
    + Configure(): void
    + HandleAsync(req: GoogleMobileLoginRequestDto, ct: CancellationToken): Task
  }

  class GoogleMobileLoginRequestDto <<DTO>> {
    + IdToken: string
  }

  class GoogleMobileLoginResponseDto <<DTO>> {
    + Success: bool
    + Message: string
    + AccessToken: string?
    + RefreshToken: string?
    + ExpiresAt: DateTime?
    + User: UserDto?
  }

  class UserDto <<DTO>> {
    + Id: Guid
    + Email: string
    + FullName: string?
    + AvatarUrl: string?
    + Roles: List<string>
  }

  GoogleMobileLoginEndpoint --> GoogleMobileLoginRequestDto : uses
  GoogleMobileLoginEndpoint --> GoogleMobileLoginResponseDto : returns
  GoogleMobileLoginResponseDto *-- UserDto : contains
}

' ============================================
' APPLICATION LAYER
' ============================================
package "APPLICATION LAYER" #D5E8D4 {
  class GoogleMobileLoginRequest <<Record>> {
    + IdToken: string
  }

  class GoogleMobileLoginResponse <<Response>> {
    + Success: bool
    + Message: string
    + AccessToken: string?
    + RefreshToken: string?
    + ExpiresAt: DateTime?
    + User: UserDto?
  }

  class GoogleMobileLoginHandler <<Handler>> {
    - _googleOAuthService: IGoogleOAuthService
    - _userRepository: IUserRepository
    - _oauthProviderRepository: IUserOAuthProviderRepository
    - _roleRepository: IRoleRepository
    - _userRoleRepository: IUserRoleRepository
    - _refreshTokenRepository: IRefreshTokenRepository
    - _jwtTokenService: IJwtTokenService
    - _userMapper: IUserMapper
    --
    + Handle(request: GoogleMobileLoginRequest, ct): Task<GoogleMobileLoginResponse>
  }

  class GoogleMobileLoginRequestValidator <<Validator>> {
    --
    + GoogleMobileLoginRequestValidator()
  }

  interface IRequestHandler {
    + Handle(request, ct): Task<Response>
  }

  GoogleMobileLoginHandler ..|> IRequestHandler : implements
  GoogleMobileLoginHandler --> GoogleMobileLoginRequest : handles
  GoogleMobileLoginHandler --> GoogleMobileLoginResponse : returns
  GoogleMobileLoginRequestValidator --> GoogleMobileLoginRequest : validates
}

' ============================================
' DOMAIN LAYER - Entities
' ============================================
package "DOMAIN LAYER - Entities" #F8CECC {
  class User <<Entity>> {
    + Id: Guid
    + Email: string
    + FullName: string?
    + AvatarUrl: string?
    + Provider: string?
    + Status: string?
    + EmailVerifiedAt: DateTime?
    + LastLoginAt: DateTime?
    + CreatedAt: DateTime
    + UpdatedAt: DateTime
    + UserOAuthProviders: List<UserOAuthProvider>
    + RefreshTokens: List<RefreshToken>
  }

  class UserOAuthProvider <<Entity>> {
    + Id: Guid
    + UserId: Guid
    + Provider: string
    + ProviderUserId: string
    + Email: string
    + DisplayName: string
    + ProfilePictureUrl: string?
    + LastLoginAt: DateTime?
    + CreatedAt: DateTime
    + UpdatedAt: DateTime
  }

  class Role <<Entity>> {
    + Id: Guid
    + Code: string
    + Name: string
  }

  class UserRole <<Entity>> {
    + UserId: Guid
    + RoleId: Guid
  }

  class RefreshToken <<Entity>> {
    + Id: Guid
    + UserId: Guid
    + Token: string
    + ExpiresAt: DateTime
    + IsRevoked: bool
    + CreatedAt: DateTime
    + CreatedBy: Guid
  }

  User "1" *-- "many" UserOAuthProvider : has
  User "1" *-- "many" RefreshToken : owns
  User "1" *-- "many" UserRole : roles
  Role "1" *-- "many" UserRole : memberships
}

' ============================================
' DOMAIN LAYER - Repositories
' ============================================
package "DOMAIN LAYER - Repositories" #FFE6CC {
  interface IUserRepository <<Interface>> {
    + GetByEmailAsync(email: string, ct): Task<User?>
    + CreateAsync(user: User, ct): Task
    + UpdateAsync(user: User, ct): Task
    + GetUserWithRolesAsync(userId: Guid, ct): Task<User>
  }

  interface IUserOAuthProviderRepository <<Interface>> {
    + GetByProviderUserIdAsync(provider: string, providerUserId: string, ct): Task<UserOAuthProvider?>
    + CreateAsync(entity: UserOAuthProvider, ct): Task
    + UpdateAsync(entity: UserOAuthProvider, ct): Task
  }

  interface IRoleRepository <<Interface>> {
    + GetByCodeAsync(code: string, ct): Task<Role?>
  }

  interface IUserRoleRepository <<Interface>> {
    + AssignRoleToUserAsync(userId: Guid, roleId: Guid, ct): Task
    + GetUserRolesAsync(userId: Guid, ct): Task<List<Role>>
  }

  interface IRefreshTokenRepository <<Interface>> {
    + CreateAsync(token: RefreshToken, ct): Task
  }
}

' ============================================
' COMMON SERVICES
' ============================================
package "COMMON SERVICES" #E1D5E7 {
  interface IMediator <<Interface>> {
    + Send<TResponse>(request, ct): Task<TResponse>
  }

  interface IGoogleOAuthService <<Interface>> {
    + VerifyIdTokenAsync(idToken: string, ct): Task<GoogleUserInfo>
  }

  interface IJwtTokenService <<Interface>> {
    + GenerateAccessToken(userId: Guid, email: string, roles: List<string>): string
    + GenerateRefreshToken(): string
  }

  interface IUserMapper <<Interface>> {
    + MapToDto(user: User): UserDto
  }

  interface IFeatureRequest <<Interface>> { }
  interface IFeatureResponse <<Interface>> { }

  GoogleMobileLoginRequest ..|> IFeatureRequest
  GoogleMobileLoginResponse ..|> IFeatureResponse
}

' ============================================
' RELATIONSHIPS
' ============================================
GoogleMobileLoginEndpoint ..> IMediator : uses
GoogleMobileLoginEndpoint ..> GoogleMobileLoginRequest : sends

GoogleMobileLoginHandler ..> IGoogleOAuthService : uses
GoogleMobileLoginHandler ..> IUserRepository : uses
GoogleMobileLoginHandler ..> IUserOAuthProviderRepository : uses
GoogleMobileLoginHandler ..> IRoleRepository : uses
GoogleMobileLoginHandler ..> IUserRoleRepository : uses
GoogleMobileLoginHandler ..> IRefreshTokenRepository : uses
GoogleMobileLoginHandler ..> IJwtTokenService : uses
GoogleMobileLoginHandler ..> IUserMapper : maps

GoogleMobileLoginRequestDto ..> GoogleMobileLoginRequest : maps to
GoogleMobileLoginResponseDto ..> GoogleMobileLoginResponse : maps from
UserDto ..> User : represents

' ============================================
' LEGEND
' ============================================
legend bottom left
  | Color | Layer |
  | #E1D5E7 | Presentation Layer & Common Services |
  | #D5E8D4 | Application Layer |
  | #F8CECC | Domain Entities |
  | #FFE6CC | Domain Repositories |
  | | |
  | Line Style | Meaning |
  | --> | Dependency |
  | ..> | Uses/Sends |
  | ..\|> | Implements |
  | *-- | Composition |
endlegend

@enduml
